fixed webkit mobile layout more on smaller screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,7 @@ body {
 }
 
 html {
-    min-width: 400px;
+    min-width: 410px;
 }
 
 img {
